--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -15,6 +15,8 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          eslint_flags: "./**/*.{vue,ts,js}"
+          eslint_flags: './**/*.{vue,ts,js}'
       - name: eslint
         run: yarn lint
+      - name: format
+        run: yarn format
