--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint src --ext .js,jsx,.ts,.tsx --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'",
     "test": "jest",
+    "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -17,6 +18,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
+    "lodash-es": "^4.17.21",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -29,7 +31,9 @@
     "@storybook/addon-links": "^6.4.8",
     "@storybook/react": "^6.4.8",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^27.0.3",
+    "@types/lodash-es": "^4.17.5",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
     "babel-loader": "^8.2.3",
@@ -38,6 +42,8 @@
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.4.3",
     "prettier": "^2.5.1",
+    "react-recoil-hooks-testing-library": "^0.1.0",
+    "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.1.1",
     "typescript": "4.5.2"
   }
