--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
+    "axios": "^0.24.0",
     "lodash-es": "^4.17.21",
     "next": "12.0.7",
     "react": "17.0.2",
