--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@date-io/dayjs": "^2.11.0",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.1",
+    "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.3",
     "axios": "^0.24.0",
+    "dayjs": "^1.10.7",
     "lodash-es": "^4.17.21",
     "next": "12.0.7",
     "react": "17.0.2",
