--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^5.2.1",
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.3",
+    "@mui/x-data-grid": "^5.2.1",
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
     "lodash-es": "^4.17.21",
