--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint src --ext .js,jsx,.ts,.tsx --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'",
     "test": "jest",
+    "coverage:ci": "jest --coverage --silent --ci --testLocationInResults --json --outputFile=\"report.json\"",
     "test:watch": "jest --watch",
     "storybook": "NEXT_PUBLIC_API_MOCKING=enabled start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook"
