--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         with:
-          issue-number: $${github.event.pull_request.number}
+          issue-number: ${{github.event.pull_request.number}}
           body: |
             Storybook をデプロイしました。
             - https://azukiazusa1.github.io/my-resume-builder/
