--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^27.4.3",
     "msw": "^0.36.3",
     "msw-storybook-addon": "^1.5.0",
