--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
-    "recoil": "^0.5.2"
+    "recoil": "^0.5.2",
+    "swr": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
