--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.3",
     "@mui/x-data-grid": "^5.2.1",
+    "@react-pdf/renderer": "^2.0.21",
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
     "lodash-es": "^4.17.21",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
+    "react-debounce-render": "^7.0.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
     "recoil": "^0.5.2",
