--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react-debounce-render": "^7.0.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
+    "react-hook-form": "^7.22.5",
     "recoil": "^0.5.2",
-    "swr": "^1.1.2"
+    "swr": "^1.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
