--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/lodash-es": "^4.17.5",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
+    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
