--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react-debounce-render": "^7.0.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
+    "react-hook-form": "^7.22.5",
     "recoil": "^0.5.2",
-    "swr": "^1.1.2"
+    "swr": "^1.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -49,6 +51,7 @@
     "@types/lodash-es": "^4.17.5",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
+    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
