--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^27.4.3",
+    "mockdate": "^3.0.5",
     "msw": "^0.36.3",
     "msw-storybook-addon": "^1.5.0",
     "prettier": "^2.5.1",
