--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
     "lodash-es": "^4.17.21",
+    "nanoid": "^3.2.0",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
@@ -35,8 +36,7 @@
     "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.22.5",
     "recoil": "^0.5.2",
-    "swr": "^1.1.2",
-    "uuid": "^8.3.2"
+    "swr": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -51,7 +51,6 @@
     "@types/lodash-es": "^4.17.5",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
-    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
